--- a/src/app/paginas/carrito/carrito.component.html
+++ b/src/app/paginas/carrito/carrito.component.html
@@ -1,4 +1,4 @@
-<h1>carrito de compras</h1>
+<!-- <h1>carrito de compras</h1>
 <div *ngIf = "productosEnCarrito.length === 0">
     <p>No hay productos en el carrito</p>
 </div>
@@ -31,3 +31,4 @@
     </tbody>
 </table>
 <button (click)="realizarCompra()" class="btn btn-success"> Realizar compras</button>
+-->
