--- a/src/app/paginas/inicio/inicio.component.css
+++ b/src/app/paginas/inicio/inicio.component.css
@@ -1,67 +1,19 @@
-
-/* estilos generales*/
-body{
-    background-color: rgb(199, 144, 252);
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
+h1, p {
+    color: white;
+    text-shadow:
+        -1px -1px 0 black,
+        1px -1px 0 black,
+        -1px 1px 0 black,
+        1px 1px 0 black;
 }
 
-/*contenedor de las tarjetas*/
-.card-container{
-    display: flex;
-    justify-content: center;  /*centra horizontalmente*/
-    gap: 20px; /*espacio entre las tarjetas*/
-    flex-wrap: wrap; /*permite que se acomode en pantallas chicas*/
-    padding: 20px;
+
+
+mat-grid-tile {
+    background: rgb(88, 8, 19);
 }
 
-/*estilos pra la tarjeta*/
 
-.card{
-    width: 18rem;
-    background-color: rgb(70, 8, 128);
-    color: rgb(255, 255, 255);
-    border-radius: 10px;
-    overflow: hidden;
-    transition: transform 0.3s ease-in-out, box- shadow 0.3s ease-in-out;
-    box-shadow: 0.4px 8px rgba(rgb(255, 255, 255), rgb(255, 255, 255), rgb(255, 255, 255), 0,1);
-}
-
-/*efecto hover en la tarjeta*/
-
-.card:hover{
-transform: scale(1.05);
-box-shadow: 0px 8px 16px rgba(rgb(255, 255, 255), rgb(255, 255, 255), rgb(255, 255, 255), 0.2);
-
-}
-
-/*imagend entro de la tarjeta*/
-.card img{
-width: 100%;
-height: 200px;
-object-fit: cover
-;
-}
-
-/*boton estilizado*/
-
-.card .btn{
-    background-color: rgb(205, 136, 252);
-    color: black;
-    border: none;
-    transition: backgroun 0.3s ease-in-out;
-
-}
-
-.card .btn:hover{
-    background-color: rgb(255, 255, 255);
-
-}
-
-/*responsividad para pantallas chica*/
-@media(max-width: 600px){
-    .card-container{
-        flex-direction: column; /*cambia a columnas*/
-        align-items: center; /* centra en pantallas chicas*/
-    }
+.cuadri {
+    margin: 80px;
 }
