--- a/src/app/paginas/productos/productos.component.css
+++ b/src/app/paginas/productos/productos.component.css
@@ -1,51 +1,66 @@
+/* estilos generales*/
 body{
-    background-color: black;
-    color: beige;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: rgb(199, 144, 252);
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+/*contenedor de las tarjetas*/
 .card-container{
     display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
+    justify-content: center;  /*centra horizontalmente*/
+    gap: 20px; /*espacio entre las tarjetas*/
+    flex-wrap: wrap; /*permite que se acomode en pantallas chicas*/
     padding: 20px;
 }
+
+/*estilos pra la tarjeta*/
+
 .card{
     width: 18rem;
-    background-color: rgb(242, 220, 245);
-    color: black;
+    background-color: rgb(70, 8, 128);
+    color: rgb(255, 255, 255);
     border-radius: 10px;
     overflow: hidden;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    transition: transform 0.3s ease-in-out, box- shadow 0.3s ease-in-out;
+    box-shadow: 0.4px 8px rgba(rgb(255, 255, 255), rgb(255, 255, 255), rgb(255, 255, 255), 0,1);
 }
+
+/*efecto hover en la tarjeta*/
 
 .card:hover{
-    transform: scale(1.05);
-    box-shadow: 0px 8px 16px rgba(255, 255, 255, 0.2);
+transform: scale(1.05);
+box-shadow: 0px 8px 16px rgba(rgb(255, 255, 255), rgb(255, 255, 255), rgb(255, 255, 255), 0.2);
+
 }
 
+/*imagend entro de la tarjeta*/
 .card img{
-    object-fit: cover;
+width: 100%;
+height: 200px;
+object-fit: cover
+;
 }
+
+/*boton estilizado*/
 
 .card .btn{
-    width: 200p;
-    height: 100%;
-    background-color: rgb(187, 127, 243);
+    background-color: rgb(205, 136, 252);
     color: black;
     border: none;
-    transition: background 0.3s ease-in-out;
+    transition: backgroun 0.3s ease-in-out;
+
 }
 
 .card .btn:hover{
-    background-color:rgb(216, 133, 255);
+    background-color: rgb(255, 255, 255);
+
 }
 
-@media(max-width:600px) {
-    .card-body {
-        flex-direction: column;
-        align-items: center;
+/*responsividad para pantallas chica*/
+@media(max-width: 600px){
+    .card-container{
+        flex-direction: column; /*cambia a columnas*/
+        align-items: center; /* centra en pantallas chicas*/
     }
 }
