--- a/src/app/paginas/inicio/inicio.component.html
+++ b/src/app/paginas/inicio/inicio.component.html
@@ -9,22 +9,21 @@
         preserveAspectRatio="xMidYMid slice" width="100%">
       <div class="container">
         <div class="carousel-caption text-start">
-          <h1>Direct to Film</h1>
-          <p class="opacity-75">Técnica de impresión textil que utiliza una impresora especializada para imprimir
-            diseños directamente sobre un film especial, que luego se puede transferir a la tela mediante calor.</p>
-          <p><a class="btn btn-lg btn-primary" routerLink="">Ver productos DTF</a></p>
+          <h1>Centro de mesa</h1>
+          <p class="opacity-75">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+          <h2><a routerLink="" class="boton">Ver diseños de centros de mesa</a></h2>
         </div>
       </div>
     </div>
 
-    <div class="carousel-item"> <img src="img/c2.png" alt="" aria-hidden="true" class="bd-placeholder-img "
+    <div class="carousel-item"> <img src="img/c2.png" alt="" aria-hidden="true" class="bd-placeholder-img"
         height="100%" preserveAspectRatio="xMidYMid slice" width="100%">
       <div class="container">
         <div class="carousel-caption">
-          <h1>Impresión Digital Textil</h1>
-          <p>Técnica moderna de impresión que utiliza una impresora especializada para transferir diseños directamente
-            sobre textiles usando tintas a base de agua.[</p>
-          <p><a class="btn btn-lg btn-primary" routerLink="">Ver productos de DTG</a></p>
+          <h1>Vasos y Alcancias</h1>
+          <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <h2><a routerLink="" class="boton">Ver diseños de vasos y alcancias</a></h2>
+
         </div>
       </div>
     </div>
@@ -33,10 +32,10 @@
         height="100%" preserveAspectRatio="xMidYMid slice" width="100%">
       <div class="container">
         <div class="carousel-caption text-end">
-          <h1>Sublimación</h1>
-          <p>Técnica de impresión que permite transferir imágenes a objetos, principalmente textiles, usando tintas
-            especiales y calor.</p>
-          <p><a class="btn btn-lg btn-primary" routerLink="">Ver productos de Sublimacion</a></p>
+          <h1>Cajitas Milk</h1>
+          <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <h2><a routerLink="" class="boton">Ver diseños de cajitas milk</a></h2>
+
         </div>
       </div>
     </div>
@@ -48,13 +47,13 @@
 </div>
 
 
-<mat-grid-list cols="2" rowHeight="3:2" class="cuadri">
-  <mat-grid-tile> <img src="img/cua1.png" alt="" class="collage"> </mat-grid-tile>
-  <mat-grid-tile> <img src="img/cua2.png" alt="" class="collage"> </mat-grid-tile>
-  <mat-grid-tile> <img src="img/cua3.png" alt="" class="collage"> </mat-grid-tile>
-  <mat-grid-tile> <img src="img/cua4.png" alt="" class="collage"> </mat-grid-tile>
-  <mat-grid-tile> <img src="img/cua5.png" alt="" class="collage"> </mat-grid-tile>
-  <mat-grid-tile> <img src="img/cua6.png" alt="" class="collage"> </mat-grid-tile>
+<mat-grid-list cols="2" rowHeight="2:2" class="cuadri">
+  <mat-grid-tile> <img src="img/1.png" alt="" class="collage"> </mat-grid-tile>
+  <mat-grid-tile> <img src="img/2.png" alt="" class="collage"> </mat-grid-tile>
+  <mat-grid-tile> <img src="img/3.png" alt="" class="collage"> </mat-grid-tile>
+  <mat-grid-tile> <img src="img/4.png" alt="" class="collage"> </mat-grid-tile>
+  <mat-grid-tile> <img src="img/5.png" alt="" class="collage"> </mat-grid-tile>
+  <mat-grid-tile> <img src="img/6.png" alt="" class="collage"> </mat-grid-tile>
 </mat-grid-list>
 
     
