--- a/src/app/paginas/productos/productos.component.html
+++ b/src/app/paginas/productos/productos.component.html
@@ -1,7 +1,6 @@
-<!-- 
 <h1>Productos</h1>
 <div class="card-container">
-    <ng-container *ngFor="let producto of Productos">
+    <ng-container *ngFor="let producto of productos.length">
       <div *ngIf="producto.disponibilidad" class="card">
           <img [src]="{{producto.imagen}}" alt="{{producto.nombre}}" class="product-image">
           <h2>{{producto.nombre}}</h2>
@@ -10,4 +9,4 @@
           <button type="button" class="btn btn-outline-primary" (click)="agregar(producto)">Agregar al Carrito</button>      
         </div>
     </ng-container>
-</div>-->
+</div>
