--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,44 +1,43 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" routerLink="">MAGIA</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" routerLink="/inicio">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/productos">Productos</a>
-           </li>
-           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/ofertas">Ofertas</a>
-           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Mas
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" routerLink="/contacto">Contacto</a></li>
-              <li><a class="dropdown-item" routerLink="carrito">Carrito</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" routerLink="/quienessomos">Quienes Somos</a></li>
-            </ul>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
-        </form>
-
-        <li>
-          <a routerLink="/carrito">
-            <i class="bi bi-cart"></i>
-            <span *ngIf="cantidadProductos > 0">{{cantidadProductos}}</span>
-          </a>
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink=""><img src="img/logoe.png" alt=""></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/inicio">Inicio</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/productos">Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/ofertas">Ofertas</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Mas
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/contacto">Contacto</a></li>
+            <li><a class="dropdown-item" routerLink="carrito">Carrito</a></li>
+            <li><a class="dropdown-item" routerLink="/quienessomos">Quienes Somos</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Buscar</button>
+      </form>
+      <li>
+        <a routerLink="/carrito">
+          <i class="bi bi-cart"></i>
+          <span *ngIf="cantidadProductos > 0">{{cantidadProductos}}</span>
+        </a>
+      </li>
 
-      </div>
     </div>
-  </nav>
+  </div>
+</nav>
