--- a/src/app/paginas/carrito/carrito.component.html
+++ b/src/app/paginas/carrito/carrito.component.html
@@ -1,26 +1,27 @@
-<!-- <h1>carrito de compras</h1>
-<div *ngIf = "productosEnCarrito.length === 0">
-    <p>No hay productos en el carrito</p>
+<h1>Carrito de Compras</h1>
+<div *ngIf="productoEnCarrito.length === 0">
+    <p>No hay productos en el carrito </p>
 </div>
 <table class="table">
     <thead>
         <tr>
-            <th>imagen</th>
-            <th>nombre</th>
-            <th>descripcion</th>
-            <th>precio</th>
-            <th>cantidad</th>
-            <th>accion</th>
+            <th>Imagen</th>
+            <th>Nombre</th>
+            <th>Descripcion</th>
+            <th>Precio</th>
+            <th>Cantidad</th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor = "let item of productosEnCarrito; let i = index">
-            <td><img [src]="item.producto.imagen" alt="{{item.producto.nombre}}" style="width: 50px; height: 50px;"></td>
+        <tr *ngFor="let item of productoEnCarrito;let i = index">
+            <td><img [src]="item.producto.img" alt="{{item.producto.nombre}}" style="width: 50px; height: 50px;">
+            </td>
             <td> {{item.producto.nombre}}</td>
             <td>{{item.producto.descripcion}}</td>
-            <td> {{item.producto.precio | currency}}</td>
+            <td>{{item.producto.precio }}</td>
             <td>
-                <button (click)="quitarCantidad(i)" >-</button>
+                <button (click)="quitarCantidad(i)">-</button>
                 {{item.cantidad}}
                 <button (click)="agregarCantidad(i)">+</button>
             </td>
@@ -30,5 +31,4 @@
         </tr>
     </tbody>
 </table>
-<button (click)="realizarCompra()" class="btn btn-success"> Realizar compras</button>
--->
+<button (click)="realizarCompra()" class="btn btn-success">Realizar Compra</button>
