--- a/src/app/paginas/productos/productos.component.css
+++ b/src/app/paginas/productos/productos.component.css
@@ -1,66 +1,58 @@
-/* estilos generales*/
+/*Estilos Generales*/
 body{
-    background-color: rgb(199, 144, 252);
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #222;
+    color: white;
+    font-family: Arial, sans-serif;
 }
 
-/*contenedor de las tarjetas*/
+/*Contenedor de las tarjetas*/
 .card-container{
     display: flex;
-    justify-content: center;  /*centra horizontalmente*/
-    gap: 20px; /*espacio entre las tarjetas*/
-    flex-wrap: wrap; /*permite que se acomode en pantallas chicas*/
+    justify-content: center; /*Centra horizontalmente*/
+    gap: 20px; /*Espacio entre las tarjetas*/
+    flex-wrap: wrap;/*permite que se acomoden en pantallas chicas*/
     padding: 20px;
 }
 
-/*estilos pra la tarjeta*/
-
+/*Estilos para la tarjeta*/
 .card{
     width: 18rem;
-    background-color: rgb(70, 8, 128);
-    color: rgb(255, 255, 255);
+    background-color: #333;
+    color: white;
     border-radius: 10px;
     overflow: hidden;
-    transition: transform 0.3s ease-in-out, box- shadow 0.3s ease-in-out;
-    box-shadow: 0.4px 8px rgba(rgb(255, 255, 255), rgb(255, 255, 255), rgb(255, 255, 255), 0,1);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    box-shadow: 0px 4px 8px rgba(255, 255,255,255, 0.1);
 }
 
 /*efecto hover en la tarjeta*/
-
 .card:hover{
-transform: scale(1.05);
-box-shadow: 0px 8px 16px rgba(rgb(255, 255, 255), rgb(255, 255, 255), rgb(255, 255, 255), 0.2);
-
+    transform: scale(1.05);
+    box-shadow: 0px 8px 16px rgba(255, 255, 255, 0.2);
 }
 
-/*imagend entro de la tarjeta*/
+/*imagen dentro de la tarjeta*/
 .card img{
-width: 100%;
-height: 200px;
-object-fit: cover
-;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 
-/*boton estilizado*/
-
+/*Boton estilizado*/
 .card .btn{
-    background-color: rgb(205, 136, 252);
+    background-color: yellow;
     color: black;
     border: none;
-    transition: backgroun 0.3s ease-in-out;
-
+    transition: background 0.3s ease-in-out;
 }
-
 .card .btn:hover{
-    background-color: rgb(255, 255, 255);
-
+    background-color: yellow;
 }
 
-/*responsividad para pantallas chica*/
-@media(max-width: 600px){
+/*Resposividad para pantallas chicas*/
+@media(max-width:600px){
     .card-container{
-        flex-direction: column; /*cambia a columnas*/
-        align-items: center; /* centra en pantallas chicas*/
+        flex-direction: column; /*cambia a columna*/
+        align-items: center; /*centra en pantallas chicas*/
     }
 }
