--- a/src/app/paginas/carrito/carrito.component.html
+++ b/src/app/paginas/carrito/carrito.component.html
@@ -1,34 +1,52 @@
-<h1>Carrito de Compras</h1>
-<div *ngIf="productoEnCarrito.length === 0">
-    <p>No hay productos en el carrito </p>
-</div>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Imagen</th>
-            <th>Nombre</th>
-            <th>Descripcion</th>
-            <th>Precio</th>
-            <th>Cantidad</th>
-            <th>Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let item of productoEnCarrito;let i = index">
-            <td><img [src]="item.producto.img" alt="{{item.producto.nombre}}" style="width: 50px; height: 50px;">
-            </td>
-            <td> {{item.producto.nombre}}</td>
-            <td>{{item.producto.descripcion}}</td>
-            <td>{{item.producto.precio }}</td>
-            <td>
-                <button (click)="quitarCantidad(i)">-</button>
-                {{item.cantidad}}
-                <button (click)="agregarCantidad(i)">+</button>
-            </td>
-            <td>
-                <button (click)="eliminarProducto(item.producto.id)">Eliminar</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
-<button (click)="realizarCompra()" class="btn btn-success">Realizar Compra</button>
+<body>
+    <h1 class="text-center my-4">Carrito de Compras</h1>
+
+    <div *ngIf="productoEnCarrito.length === 0" class="alert alert-warning text-center">
+        <p>No hay productos en el carrito </p>
+    </div>
+
+    <div *ngIf="productoEnCarrito.length > 0" class="container">
+        <table class="table table-hover table-bordered align-middle text-center">
+            <thead>
+                <tr>
+                    <th>Imagen</th>
+                    <th>Nombre</th>
+                    <th>Descripcion</th>
+                    <th>Precio</th>
+                    <th>Cantidad</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody class="tabla">
+                <tr *ngFor="let item of productoEnCarrito;let i = index">
+                    <td>
+                        <img [src]="item.producto.img" alt="{{item.producto.nombre}}" class="img-thumbnail"
+                            style="width: 70px; height: 70px;">
+                    </td>
+                    <td class="fw-bold">{{item.producto.nombre}}</td>
+                    <td>{{item.producto.descripcion}}</td>
+                    <td>{{item.producto.precio }}</td>
+                    <td>
+                        <div class="btn-group" role="group" aria-label="Cantidad">
+                            <button class="btn btn-outline-danger btn-sm" (click)="quitarCantidad(i)">-</button>
+                            <span class="px-2">{{item.cantidad}}</span>
+                            <button class="btn btn-outline-success btn-sm" (click)="agregarCantidad(i)">+</button>
+                        </div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-danger btn-sm" (click)="eliminarProducto(item.producto.id)">
+                            <i class="fa-solid fa-trash"></i>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="text-end mt-4" *ngIf="productoEnCarrito.length > 0">
+            <h4 class=" fw-bold">Total : {{calcularTotal()}}</h4>
+            <button class="btn btn-primary mt-2" (click)="irAFormularioCompra()">
+                <i class="bi bi-cart-check"></i> Realizar Compra
+            </button>
+        </div>
+    </div>
+
+</body>
