--- a/src/app/paginas/inicio/inicio.component.html
+++ b/src/app/paginas/inicio/inicio.component.html
@@ -9,7 +9,7 @@
         preserveAspectRatio="xMidYMid slice" width="100%">
       <div class="container">
         <div class="carousel-caption text-start">
-          <h1>Centro de mesa</h1>
+          <h1>Cajitas Milk</h1>
           <p class="opacity-75">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
           <h2><a routerLink="" class="boton">Ver diseños de centros de mesa</a></h2>
         </div>
@@ -32,7 +32,7 @@
         height="100%" preserveAspectRatio="xMidYMid slice" width="100%">
       <div class="container">
         <div class="carousel-caption text-end">
-          <h1>Cajitas Milk</h1>
+          <h1>Centros de mesa</h1>
           <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
                     <h2><a routerLink="" class="boton">Ver diseños de cajitas milk</a></h2>
 
