--- a/src/app/paginas/productos/productos.component.html
+++ b/src/app/paginas/productos/productos.component.html
@@ -1,4 +1,13 @@
-<h1>Productos</h1>
+<div class="fotopro"> <img src="img/arpro.png" alt="" aria-hidden="true" class="bd-placeholder-img"
+        height="100%" preserveAspectRatio="xMidYMid slice" width="100%">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1 class="texto">Los Productos de Dulce Muna</h1>
+          <p class="texto">Personaliza todo con el nombre y diseño que mas te guste</p>
+        </div>
+      </div>
+    </div>
+
 <div class="card-container">
     <ng-container *ngIf="Productos && Productos.length">
         <ng-container *ngFor ="let producto of Productos">
